# ChangeLog for dev-ruby/xmpp4r
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/xmpp4r/ChangeLog,v 1.15 2009/11/27 17:11:21 a3li Exp $

  27 Nov 2009; Alex Legler <a3li@gentoo.org> xmpp4r-0.5.ebuild:
  Remove SRC_URI, hopefully fixes bug 294440

  23 Sep 2009; Hans de Graaff <graaff@gentoo.org> -xmpp4r-0.3.2.ebuild,
  -xmpp4r-0.4.ebuild:
  Remove old versions.

  22 Sep 2009; Markus Meier <maekke@gentoo.org> xmpp4r-0.5.ebuild:
  x86 stable, bug #282722

  26 Aug 2009; Alex Legler <a3li@gentoo.org> xmpp4r-0.5.ebuild:
  amd64 stable

*xmpp4r-0.5 (15 Jul 2009)

  15 Jul 2009; Hans de Graaff <graaff@gentoo.org> +xmpp4r-0.5.ebuild:
  Version bump with many bug fixes.

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> -xmpp4r-0.3-r1.ebuild,
  -xmpp4r-0.3.1.ebuild:
  Remove old versions

*xmpp4r-0.4 (30 Nov 2008)

  30 Nov 2008; Hans de Graaff <graaff@gentoo.org> +xmpp4r-0.4.ebuild:
  Version bump.

  27 Mar 2008; Markus Meier <maekke@gentoo.org> xmpp4r-0.3.2.ebuild:
  amd64/x86 stable, bug #214612

*xmpp4r-0.3.2 (01 Nov 2007)

  01 Nov 2007; Hans de Graaff <graaff@gentoo.org> +xmpp4r-0.3.2.ebuild:
  Version bump per bug #197606.
  
  * Serious bug involving Ruby threading fixed (caused exceptions with ruby 1.8.6) 
  * vCard helper fixes 
  * Jabber RPC (JEP0009) support 
  * HTTP Binding (JEP0124) support 
  * Publish-Subscribe support 
  * XMPPElement: a framework for classes representing XML elements 
  * Ad-hoc commands support 
  * Improvements to Dataforms: XData, XDataTitle and XDataInstructions

*xmpp4r-0.3.1 (13 May 2007)

  13 May 2007; Hans de Graaff <graaff@gentoo.org> -xmpp4r-0.3.ebuild,
  +xmpp4r-0.3.1.ebuild:
  Version bump: thanks for Jochen Schalanda in #177161.
  
  Changes in this version:
  * SASL fixes
  * Message#x and Presence#x support element selection by namespace
  * Proper XML entity escaping for REXML text nodes